--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
+  username: hafizalwan
+  password: H@fi34lwan91
   socket: /var/run/mysqld/mysqld.sock
 
 development:
