--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: hafizalwan
-  password: 
+  password: H@fi34lwan91
   socket: /var/run/mysqld/mysqld.sock
 
 development:
@@ -49,6 +49,4 @@ test:
 #
 production:
   <<: *default
-  database: buyticketsmy-v3_production
-  username: buyticketsmydb
-  password: <%= ENV['BUYTICKETSMYDB_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
